--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
                           <input type="text" id="start_date" name="start_date" class="slds-input" />
                       </div>
                     </div>
+                    <div class="slds-form-element">
+                      <label class="slds-form-element__label" for="start_time">
+                      Start Time</label>
+                      <div class="slds-form-element__control">
+                          <input type="text" id="start_time" name="start_time" class="slds-input" />
+                      </div>
+                    </div>
                     <div class="slds-form-element slds-p-bottom_large">
                       <label class="slds-form-element__label" for="valid_duration">
                       Validity Duration, days</label>
