--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                       <label class="slds-form-element__label" for="start_time">
                       Start Time</label>
                       <div class="slds-form-element__control">
-                          <input type="text" id="start_time" name="start_time" class="slds-input" />
+                          <input type="time" id="start_time" name="start_time" class="slds-input" value="00:00"/>
                       </div>
                     </div>
                     <div class="slds-form-element slds-p-bottom_large">
